hphp/test/slow/object_method/bad-inlining.php.expectf
int(1)

Notice: Undefined variable: x in %s/test/slow/object_method/bad-inlining.php on line 26

Fatal error: Uncaught exception 'BadMethodCallException' with message 'Call to a member function foo() on a non-object (NULL)' in %s/test/slow/object_method/bad-inlining.php:15
Stack trace:
#0 %s/test/slow/object_method/bad-inlining.php(19): foo(false, 'a')
#1 {main}